@@ -10,6 +10,10 @@
 	Since we (Linaro TCWG) use ssh, this patch just removes "ssh rm
 	-f", since scp will overwrite the file, if one is present.
 
+2015-11-12  Ben Elliston  <bje@gnu.org>
+
+	* lib/framework.exp (note): Remove old commented-out code.
+
 2015-11-11  Ben Elliston  <bje@gnu.org>
 
 	* doc/user.xml (Summary File): 'untested', not 'runtested'.
